# vec_soa

./: Cargo.toml  README.md
src/: data.rs  index.rs  iter.rs  lib.rs  slice.rs  vec.rs
src/index/: index_bound.rs  index_range.rs  index_range_from.rs  index_range_full.rs  index_range_inclusive.rs  index_range_to.rs  index_range_to_inclusive.rs  index_usize.rs
tests/: test_basic.rs  test_zst.rs
